<resources>
    <string name="app_name">Movies App</string>
    <string name="search_dot">Search...</string>
    <string name="search">Search</string>
    <string name="clear_transition">clear_transition</string>
    <string name="search_transition">searchTransition</string>
    <string name="line_transition">line_transition</string>
    <string name="play">play</string>
    <string name="director">Director:</string>
    <string name="the_cast">The Cast</string>
    <string name="home">Home</string>
    <string name="tv">TV</string>
    <string name="main">main</string>
    <string name="birthday">Birthday</string>
    <string name="popularity">Popularity :</string>
    <string name="show_more">Show More</string>
    <string name="person">Person</string>
    <string name="movies">TMDB</string>
    <string name="tv_show">TV Show</string>
    <string name="all">All</string>
    <string name="writer">Writer:</string>
    <string name="dash">-</string>
    <string name="trending">Trending</string>
    <string name="rated">Rated</string>
    <string name="categories">Categories</string>
    <string name="about">About</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="categories_list">categories list</string>
    <string name="today">Today</string>
    <string name="now">Now</string>
    <string name="biography">Biography</string>
    <string name="alive">Is Alive</string>
    <string name="popular_cast">POPULAR CAST</string>
    <string name="overview">Overview</string>
    <string name="cast">Cast</string>
    <string name="similar_movie">Similar Movie</string>
    <string name="similar_tv_shows">Similar TV Shows</string>
    <string name="popular">Popular</string>
    <string name="movie_image">movie image</string>
    <string name="Upcoming">Upcoming</string>
    <string name="topRated">Top Rated</string>
    <string name="Famous">Famous</string>
    <string name="try_again">Try again</string>
    <string name="actor">Actor</string>
    <string name="next_episode">Next Episode</string>
    <string name="production_companies">Production Companies</string>
</resources>