<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        android:checked="true"
        android:color="@color/icons"/>

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        android:color="@color/icons"/>
    <item
        android:id="@+id/tvFragment"
        android:icon="@drawable/ic_baseline_live_tv_24"
        android:title="@string/tv"
        android:color="@color/icons"/>
    <item
        android:id="@+id/fragment_main"
        android:icon="@drawable/ic_baseline_live_tv_24"
        android:title="@string/main"
        android:color="@color/icons"/>
</menu>