<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.watermelon.moviesapp.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context="com.watermelon.moviesapp.ui.home.HomeFragment">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading"
            app:showWhenLoading="@{viewModel.popularMovies}" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/not_found"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/not_connect"
            app:showWhenError="@{viewModel.popularMovies}" />

        <Button
            android:id="@+id/try_again"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.refresh()}"
            android:text="@string/try_again"
            android:textColor="@color/purple"
            app:icon="@drawable/ic_baseline_replay_24"
            app:iconTint="@color/purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/not_found"
            app:showWhenError="@{viewModel.popularMovies}" />

        <ScrollView
            android:id="@+id/sub_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showWhenSuccess="@{viewModel.popularMovies}">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_color"
                tools:context="com.watermelon.moviesapp.ui.home.HomeFragment">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin2x"
                    android:gravity="center"
                    android:text="@string/movies"
                    android:textColor="@color/base_color"
                    android:textSize="@dimen/text3x"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/search"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="@dimen/margin2x"
                    android:background="@drawable/ic_search"
                    android:transitionName="@string/search_transition"
                    app:layout_constraintBottom_toBottomOf="@+id/title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/title" />

                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/image_slider"
                    android:layout_width="wrap_content"
                    android:layout_height="350dp"
                    android:layout_marginTop="@dimen/margin2x"
                    android:clipToPadding="false"
                    android:shadowColor="@color/start_gradient"
                    app:iss_auto_cycle="true"
                    app:iss_delay="1"
                    app:iss_period="1000"
                    app:iss_title_background="@drawable/layout_shape"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:listener="@{viewModel}"
                    app:setSlider="@{viewModel.tradingMovies.toData().results}"
                    app:showWhenSuccess="@{viewModel.tradingMovies}" />

                <TextView
                    android:id="@+id/popular_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin16dp"
                    android:layout_marginTop="@dimen/margin2x"
                    android:text="@string/popular"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/text18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image_slider"
                    app:showWhenSuccess="@{viewModel.popularMovies}" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/popular_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin2x"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/margin24dp"
                    app:items="@{viewModel.popularMovies.toData().results}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="@id/popular_text"
                    app:layout_constraintStart_toStartOf="@+id/popular_text"
                    app:layout_constraintTop_toBottomOf="@id/popular_text"
                    app:showWhenSuccess="@{viewModel.popularMovies}"
                    tools:listitem="@layout/item_movies" />

                <TextView
                    android:id="@+id/upcoming_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin16dp"
                    android:layout_marginTop="@dimen/margin2x"
                    android:text="@string/Upcoming"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/text18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/popular_text"
                    app:layout_constraintTop_toBottomOf="@+id/popular_recycler"
                    app:showWhenSuccess="@{viewModel.upcomingMovies}" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/upcoming_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margin2x"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/margin24dp"
                    app:items="@{viewModel.upcomingMovies.toData().results}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="@id/upcoming_text"
                    app:layout_constraintStart_toStartOf="@+id/upcoming_text"
                    app:layout_constraintTop_toBottomOf="@id/upcoming_text"
                    app:showWhenSuccess="@{viewModel.upcomingMovies}"
                    tools:listitem="@layout/item_movies" />

                <TextView
                    android:id="@+id/topRated_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin16dp"
                    android:layout_marginTop="@dimen/margin2x"
                    android:text="@string/topRated"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/text18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/popular_text"
                    app:layout_constraintTop_toBottomOf="@+id/upcoming_recycler"
                    app:showWhenSuccess="@{viewModel.topRatedMovies}" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/topRated_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margin2x"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/margin24dp"
                    app:items="@{viewModel.topRatedMovies.toData().results}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/topRated_text"
                    app:layout_constraintStart_toStartOf="@+id/topRated_text"
                    app:layout_constraintTop_toBottomOf="@id/topRated_text"
                    app:showWhenSuccess="@{viewModel.topRatedMovies}"
                    tools:listitem="@layout/item_movies" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>